# dagstream

./: .buildinfo  .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  LICENSE  Makefile  README.md  examples.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  examples.doctree  index.doctree
.doctrees/reference/: graph_components.doctree  index.doctree  utils.doctree  viewers.doctree
.github/workflows/: gh_pages.yml
_modules/: index.html
_modules/dagstream/graph_components/dags/: functional_dag.html
_modules/dagstream/graph_components/nodes/: functional_node.html  node_state.html
_modules/dagstream/utils/: errors.html
_sources/: index.rst.txt
_sources/reference/: graph_components.rst.txt  viewers.rst.txt
_static/: documentation_options.js
docs/source/: .gitignore  conf.py  examples.rst  index.rst
docs/source/mmds/: extract.mmd  sample.mmd
docs/source/reference/: graph_components.rst  index.rst  utils.rst
reference/: graph_components.html  index.html  utils.html  viewers.html
src/: sample.py
src/dagstream/: __init__.py  dagstream.py  executor.py  knot_function.py  viewer.py
src/dagstream/graph_components/: __init__.py  _interface.py
src/dagstream/graph_components/dags/: __init__.py  functional_dag.py  interface.py
src/dagstream/graph_components/edges/: __init__.py  _edge.py
src/dagstream/graph_components/nodes/: __init__.py  functional_node.py  interface.py  node_state.py
src/dagstream/graphs/: __init__.py  dagstream.py  functional_dag.py  functional_node.py  interface.py  node_state.py
src/dagstream/graphs/nodes/: functional_node.py  interface.py  node_state.py
src/dagstream/utils/: __init__.py  errors.py  util.py
src/dagstream/viewers/: __init__.py  viewer.py
tests/: test_dagstream.py  test_executors.py  test_multiprocess.py  test_version.py
tests/test_by_examples/test_run_with_pipe/: sample.mmd  test_case.py
tests/test_by_examples/test_run_with_pipe_and_order/: sample.mmd  test_case.py
tests/test_by_examples/test_run_with_same_functions/: sample.mmd  test_case.py
tests/test_by_examples/test_run_with_subdag/: sample.mmd  test_case.py
tests/test_executors/: test_compare_single_and_parallel.py  test_parallel_executor.py  test_single_executor.py
tests/test_graph_components/test_dags/: test_functional_dag.py
tests/test_graph_components/test_edges/: test_edge.py
tests/test_graph_components/test_nodes/: test_functional_node.py  test_node_state.py
